Created Borrow Function in BookDetailsActivity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Android E-Library</string>
     <string name="book_cover">Book Cover</string>
     <string name="back_button">Back Button</string>
+    <string name="borrow_button">Borrow</string>
 </resources>
