--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="book_cover">Book Cover</string>
     <string name="back_button">Back Button</string>
     <string name="borrow_button">Borrow</string>
+    <string name="submit_rating">Submit Rating</string>
 </resources>
