--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,9 @@
     <string name="borrow_button">Borrow</string>
     <string name="submit_rating">Submit Rating</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="profile">Profile\n</string>
+    <string name="user_information">User Details</string>
+    <string name="username">Username</string>
+    <string name="password">Password</string>
+    <string name="logout">Logout</string>
 </resources>
