--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,6 +25,13 @@
         <item>Slow</item>
         <item>Fast</item>
     </string-array>
+    <string-array name="text_sizes">
+        <item>Small</item>
+        <item>Medium)</item>
+        <item>Large</item>
+        <item>Extra Large</item>
+    </string-array>
+    
 
 
 </resources>
